Fix horizontal scroll issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,7 @@
 }
 
 .activity-grid-item {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 0 0 10px 20px;
 }
 
 .inactive {
